Added TTA and CAL
 + Added JS Course pages from TTA
 - No other pages from TTA and no Images either
 - CAL has no images and projects

--- a/PrivateTemplates/kavemans.dev/ErrorPage.html
+++ b/PrivateTemplates/kavemans.dev/ErrorPage.html
@@ -9,13 +9,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
             body {
-                background-image: url('/src/images/RTX_Halloween.webp');
+                background-image: url('/src/images/Chalkboard.webp');
                 background-size: cover;
                 background-position: center center;
             }
 
             .ice {
-                backdrop-filter: blur(5px);
                 background-color: rgba(0, 0, 0, 0.5);
                 position: fixed;
                 top: 0;
