--- a/PublicTemplates/kavemans.dev/index.html
+++ b/PublicTemplates/kavemans.dev/index.html
@@ -20,7 +20,7 @@
           <span>Hi, my name is Kaveman and I'm a...</span>
           <span id="mainRoleThing">Software Developer</span>
         </div>
-        <span class="credits">Background: A map I worked on called <a href="/orgs/TankiX/MadnessUpdate">"Madness"</a> for the <a href="/orgs/TankiX">TankiX</a> orginization</span>
+        <span class="credits">Background: A map I worked on called "Madness" for the <a href="/orgs/TankiX/MadnessUpdate">TankiX</a> orginization</span>
       </main>
       <div id="knownLanguagesAndTech" class="container centerize">
         <h2>Skills</h2>
@@ -118,45 +118,40 @@
         </div>
       </div>
       <div id="projects" class="container centerize">
-        <h2>Recent Work</h2>
+        <h2>Recent Activity</h2>
         <div class="row dynamicMargin">
-          <img src="/src/sprites/Logo/BattleOfTheForces.png" />
-          <a href="#">Fullstack Developer - Battle of the Forces</a>
+          <img src="/src/images/TechAcademy/TransparentLogo.png" />
+          <a href="#">Student - Tech Academy</a>
           <span>
-            A game built with Unity3D using the C# language. On server side, uses Entity Framework with
-            SQLite as the storage engine. Client authentication works by sending a RESTful API to the
-            AuthServer that then returns a AuthToken and Guid combination to log into game servers. This
-            project is still in development
+            This was the Live Project portion in the bootcamp where it simulated a work enviorment and what you'd be doing as a programmer, aside from doing standups, there was a task board where there were tasks the required me to update content, add CRUD pages with .NET MVC and functionality with Entity Framework and properly style pages.
           </span>
         </div>
         <div class="row dynamicMargin">
-          <img src="/src/sprites/Logo/ReviveTankiX.png" />
-          <a href="#">Backend Developer - Revive Tanki X</a>
+          <img src="/src/sprites/Logo/ReviveTankiX.webp" />
+          <a href="/orgs/TankiX">Unity Developer - Revive Tanki X</a>
           <span>
-            Built a server with a team of 4 members for Tanki X. Was in charge of building in-game client
-            authentication, cross-server communication and central server. Used Entity Framework with MySQL as the storage
-            provider. The central server was reponsible for storing user data, authenticating game servers, balancing players
-            based on overall volume or server volume and relaying broadcasts to all active servers. And built a small
-            dashboard to keep track of statistics.
+            Since the closure of Tanki X by AlternativaGames in early 2020, I have been involved in the Revive Tanki X community as a developer.
+            I've collaborated with other developers, using Discord to communicate and GitHub as the Version Control system,
+            my work included, but wasn't limited to, client development, reverse engineering, patching, and maintenance of the game.
+          </span>
+        </div>
+        <div class="row dynamicMargin">
+          <img src="/src/sprites/Logo/BattleOfTheForces.png" />
+          <a href="/orgs/BattleOfTheForces">Fullstack Developer - Battle of the Forces</a>
+          <span>
+            This is a personal project I work on my free time and is built with Unity3D and the C# language.
+            The game is based on Tanki X except readjusting everything to be more balanced and be more logical
+            than what TankiX has become. This project is still in developerment
           </span>
         </div>
         <div class="row dynamicMargin">
           <img src="/src/sprites/Logo/SkyChat.png" />
-          <a href="#">UI/UX Developer - SkyChat</a>
+          <a href="/orgs/SkyChat">UI/UX Developer - SkyChat</a>
           <span>
             Built a web application for a decentralized chat platform for a Skynet competition.
             Looked and functioned very similiar to Discord or Slack, except not tied to a central location.
             Design is fluid and supports switching from mobile/desktop/portrait view. Also built an electron client
             which included a few tweaks to make the app look and feel more smooth.
-          </span>
-        </div>
-        <div class="row dynamicMargin">
-          <img src="/src/sprites/Logo/EducationHub.png" />
-          <a href="#">Fullstack Web Developer - Education Hub</a>
-          <span>
-            Built a web application for a learning platform in two weeks.
-            Backend utilized a node.js server and MySQL storage to get and store channels, courses and content links.
-            Frontend was built with HTML/CSS and Javascript (vanilla), was complete with a course catalog and search.
           </span>
         </div>
       </div>
