--- a/PublicTemplates/kavemans.dev/orgs/TankiX.html
+++ b/PublicTemplates/kavemans.dev/orgs/TankiX.html
@@ -61,7 +61,7 @@
         <h2>Projects<span>Most recent shown first</span></h2>
         <div class="projectEntry dynamicMargin">
           <div class="graphic">
-            <img src="http://via.placeholder.com/16x9" />
+            <img src="/src/images/aspects/16x9.png" />
             <img src="/src/images/TankiX/thumbnail/LanguageBugFixes.Preview.png" />
           </div>
           <div class="content">
@@ -87,7 +87,7 @@
         </div>
         <div class="projectEntry dynamicMargin">
           <div class="graphic">
-            <img src="http://via.placeholder.com/16x9" />
+            <img src="/src/images/aspects/16x9.png" />
             <img src="/src/images/TankiX/thumbnail/RisingSchool.Preview.png" />
           </div>
           <div class="content">
@@ -105,7 +105,7 @@
         </div>
         <div class="projectEntry dynamicMargin">
           <div class="graphic">
-            <img src="http://via.placeholder.com/16x9" />
+            <img src="/src/images/aspects/16x9.png" />
             <img src="/src/images/TankiX/thumbnail/madnessUpdate-min.png" />
           </div>
           <div class="content">
@@ -131,11 +131,11 @@
         </div>
         <div class="projectEntry dynamicMargin">
           <div class="graphic">
-            <img src="http://via.placeholder.com/16x9" />
-            <img src="/src/images/TankiX/thumbnail/LandingPage.png" />
+            <img src="/src/images/aspects/16x9.png" />
+            <img src="/src/images/TankiX/thumbnail/LandingPage.Preview.png" />
           </div>
           <div class="content">
-            <a class="title" href="./TankiX/txrevive.net">Website - Web Designer</a>
+            <a class="title" href="./TankiX/txrevive.net">TX Landing Page - Web Designer</a>
             <span class="labels">
               <span class="label centerize">
                 <img src="/src/sprites/langs/html.png" alt="HTML" />
@@ -155,13 +155,13 @@
               </span>
             </span>
             <div class="description">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              I designed a landing page for the project as a central location to download the game and check the leaderboard.
             </div>
           </div>
         </div>
         <div class="projectEntry dynamicMargin">
           <div class="graphic">
-            <img src="http://via.placeholder.com/16x9" />
+            <img src="/src/images/aspects/16x9.png" />
             <video autoplay loop>
               <source src="/src/images/TankiX/thumbnail/ContentUpdate.AnimatedPreview.mp4" type="video/mp4">
             </video>
@@ -186,7 +186,41 @@
         </div>
         <div class="projectEntry dynamicMargin">
           <div class="graphic">
-            <img src="http://via.placeholder.com/16x9" />
+            <img src="/src/images/aspects/16x9.png" />
+          </div>
+          <div class="content">
+            <a class="title" href="./TankiX/2Paint2GraffitiUpdate">App Launcher - Electron Developer</a>
+            <span class="labels">
+              <span class="label centerize">
+                <img src="/src/sprites/langs/html.png" alt="HTML" />
+                <span class="tooltiptext">HTML</span>
+              </span>
+              <span class="label centerize">
+                <img src="/src/sprites/langs/css.png" alt="CSS" />
+                <span class="tooltiptext">CSS</span>
+              </span>
+              <span class="label centerize">
+                <img src="/src/sprites/langs/javascript.png" alt="JS" />
+                <span class="tooltiptext">Javascript</span>
+              </span>
+              <span class="label centerize">
+                <img src="/src/sprites/langs/nodejs.png" alt="node.js" />
+                <span class="tooltiptext">node.js</span>
+              </span>
+              <span class="label centerize">
+                <img src="/src/sprites/langs/electron.png" alt="Electron" />
+                <span class="tooltiptext">Electron</span>
+              </span>
+            </span>
+            <div class="description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              Helped maintain code for the closed game <a href="https://tankix.com">Tanki X</a> was written in C#. When I was programming the database, I utilized SQLite (a SQL database engine), to store user profiles
+            </div>
+          </div>
+        </div>
+        <div class="projectEntry dynamicMargin">
+          <div class="graphic">
+            <img src="/src/images/aspects/16x9.png" />
             <!--<img src="http://via.placeholder.com/160x90" />-->
           </div>
           <div class="content">
