--- a/PublicTemplates/kavemans.dev/orgs/TankiX/BoomboxUpdate.html
+++ b/PublicTemplates/kavemans.dev/orgs/TankiX/BoomboxUpdate.html
@@ -22,7 +22,7 @@
           </span>
         </div>
       </main>
-      <div class="container showBorder centerize">
+      <div class="container showBorder centerize" style="margin-bottom: 0;">
         <div class="dynamicMargin">
           <a href="/">Home</a> / <a href="/projects">Projects</a> / <a href="/orgs/TankiX">Tanki X</a> / Boombox Update
         </div>
@@ -44,18 +44,46 @@
           </p>
         </div>
       </div>
-      <div class="container centerize">
-        <h2>Media<span>Something</span></h2>
+      <div id="projects" class="container centerize hr">
+        <h2>Technologies Used<span>What engines, frameworks and tools were used</span></h2>
+        <div class="row dynamicMargin">
+          <img src="/src/sprites/langs/unity.png" />
+          <a target="_blank" href="https://unity.com/products/unity-engine">Unity Engine (Unity3D)</a>
+          <span>
+            Since the game is based on Unity Game Engine, the new map had to be made in Unity.
+            Most of the tools were already built from the <a href="/orgs/TankiX/MadnessUpdate">Madness Project</a>.
+            So this project didn't require much scripting
+          </span>
+          <p style="padding-bottom:0;">I used Unity to ..</p>
+          <ul style="margin-top:0;">
+            <li>.. adjust environment lighting</li>
+            <li>.. make the fog less dense</li>
+            <li>.. change map resources, for skybox and battle sounds</li>
+          </ul>
+        </div>
+      </div>
+      <div class="container centerize hr">
+        <h2>Media<span>Pictures, animations or videos for this project</span></h2>
         <div class="mediaContent dynamicMargin centerize">
           <a class="mediaTile" target="_blank" href="/src/images/TankiX/thumbnail/RisingSchool.Preview.png">
             <img src="/src/images/aspects/16x9.png">
             <img src="/src/images/TankiX/thumbnail/RisingSchool.Preview.png">
             <p class="caption">Map Preview <em>(Cover)</em></p>
           </a>
-          <a class="mediaTile" target="_blank" href="/src/images/TankiX/BoomboxUpdate/SunnyBoxInitial.png">
+          <a class="mediaTile" target="_blank" href="/src/images/TankiX/BoomboxUpdate/Iteration2North.png">
             <img src="/src/images/aspects/16x9.png">
-            <img src="/src/images/TankiX/BoomboxUpdate/SunnyBoxInitial.png">
-            <p class="caption">Initial Daytime Variant</p>
+            <img src="/src/images/TankiX/BoomboxUpdate/Iteration2North.png">
+            <p class="caption">Initial Daytime Variant <em>(North)</em></p>
+          </a>
+          <a class="mediaTile" target="_blank" href="/src/images/TankiX/BoomboxUpdate/Iteration2East.png">
+            <img src="/src/images/aspects/16x9.png">
+            <img src="/src/images/TankiX/BoomboxUpdate/Iteration2East.png">
+            <p class="caption">Initial Daytime Variant <em>(East)</em></p>
+          </a>
+          <a class="mediaTile" target="_blank" href="/src/images/TankiX/BoomboxUpdate/Iteration2West.png">
+            <img src="/src/images/aspects/16x9.png">
+            <img src="/src/images/TankiX/BoomboxUpdate/Iteration2West.png">
+            <p class="caption">Initial Daytime Variant <em>(West)</em></p>
           </a>
           <a class="mediaTile" target="_blank" href="/src/images/TankiX/BoomboxUpdate/RisingSchoolEast.png">
             <img src="/src/images/aspects/16x9.png">
