--- a/PublicTemplates/kavemans.dev/orgs/TankiX/txrevive.net.html
+++ b/PublicTemplates/kavemans.dev/orgs/TankiX/txrevive.net.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
 		<meta charset="UTF-8">
-		<title>Madness Update - kavemans.dev</title>
+		<title>TX Landing Page - kavemans.dev</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/src/styles/framework.css" type="text/css" rel="stylesheet" />
     <link href="/src/styles/common.css" type="text/css" rel="stylesheet" />
@@ -14,17 +14,18 @@
   <body>
     <model src="kavemans.dev/header.html"></model>
     <div class="contentWrapper">
-      <main id="simpleParallaxEffect" class="centerize" style="--background-image: url('/src/images/TankiX/MadnessUpdate/SpookyMadness.webp'); /*--background-image: url('https://txrevive.net/src/images/H8-208/7.webp');*/ --background-y-anchor: 40%;">
+      <main id="simpleParallaxEffect" class="centerize" style="--background-image: url('/src/images/TankiX/txrevive.net/LandingPage.png'); /*--background-image: url('https://txrevive.net/src/images/H8-208/7.webp');*/ --background-y-anchor: 40%;">
         <div class="intro dynamicMargin" style="--background-image: url('https://avatars.githubusercontent.com/u/122141242');">
-          <span>Madness Update</span>
+          <span>TX Landing Page</span>
           <span class="linksBox centerize">
-            This update features a new map with two variants and a festive goldbox.
+            <a href="https://txrevive.net" target="_blank">txrevive.net</a>
+            I designed a landing page for the project as a central location to download the game, and also has a leaderboard.
           </span>
         </div>
       </main>
       <div class="container showBorder centerize" style="margin-bottom: 0;">
         <div class="dynamicMargin">
-          <a href="/">Home</a> / <a href="/projects">Projects</a> / <a href="/orgs/TankiX">Tanki X</a> / Madness Update
+          <a href="/">Home</a> / <a href="/projects">Projects</a> / <a href="/orgs/TankiX">Tanki X</a> / TX Landing Page
         </div>
       </div>
       <div class="container centerize">
@@ -35,11 +36,7 @@
           In the attempt to make the map more appealing and vibrant, we decided to make a new variant of the map, initially called 'SunnyBox'.
           Instead of being glommy, the map was now featured in the morning with morning dew, and hope for a new begining.
           The new map variant was not only for visual appeal, it had some tactical merit, since the fog cleared, it was more optimal to start using weapons with higher range.-->
-            In the original game "Tanki Online", there was a classic map called "Madness" commonly played with moon gravity.
-            This map was a arcade map where your able to knock other players off the map, while trying to capture flags.
-            The reason this map was chosen as the first original, is because it doesn't have a terrain or complex meshes.
-            Another member initially built the map using placeholder props, and my contributions involved making new props for the map, correcting map geometry,
-            adjusting and baking lighting, adding initial game logic and mitigating issues involved in releasing the map.
+            Needs content
           <p>
             <em>I need to add more info, one paragraph seems too little</em>
           </p>
@@ -49,7 +46,7 @@
         <h2>Technologies Used<span>What engines, frameworks and tools were used</span></h2>
         <div class="row dynamicMargin">
           <img src="/src/sprites/langs/unity.png" />
-          <a target="_blank" href="https://unity.com/products/unity-engine">Unity Engine (Unity3D)</a>
+          <a target="_blank" href="https://unity.com/products/unity-engine">Hypertext Markup Language (HTML)</a>
           <span>
             Since the game is based on Unity Game Engine, the new map had to be made in Unity.
             I opted to use Unity 2017.2.5f1 which was the latest version of Unity that has proper backwards compatability with Unity 5.6.7 - the version of Unity when the game was built.
@@ -100,70 +97,20 @@
       <div class="container centerize hr">
         <h2>Media<span>Pictures, animations or videos for this project</span></h2>
         <div class="mediaContent dynamicMargin centerize">
-          <a class="mediaTile" target="_blank" href="/src/images/TankiX/MadnessUpdate/TestMapRedBase.png">
+          <a class="mediaTile" target="_blank" href="/src/images/TankiX/txrevive.net/LandingPage.png">
             <img src="/src/images/aspects/16x9.png">
-            <img src="/src/images/TankiX/MadnessUpdate/TestMapRedBase.png">
-            <p class="caption">Test Map <em>(Red Base)</em></p>
+            <img src="/src/images/TankiX/txrevive.net/LandingPage.png">
+            <p class="caption">Home Page</p>
           </a>
-          <a class="mediaTile" target="_blank" href="/src/images/TankiX/MadnessUpdate/TestMapBridge.png">
+          <a class="mediaTile" target="_blank" href="/src/images/TankiX/txrevive.net/Leaderboard.png">
             <img src="/src/images/aspects/16x9.png">
-            <img src="/src/images/TankiX/MadnessUpdate/TestMapBridge.png">
-            <p class="caption">Test Map <em>(Bridge)</em></p>
+            <img src="/src/images/TankiX/txrevive.net/Leaderboard.png">
+            <p class="caption">Leaderboard</p>
           </a>
-          <a class="mediaTile" target="_blank" href="/src/images/TankiX/MadnessUpdate/MadnessIteration3.png">
+          <a class="mediaTile" target="_blank" href="/src/images/TankiX/txrevive.net/OrderConfirmation.png">
             <img src="/src/images/aspects/16x9.png">
-            <img src="/src/images/TankiX/MadnessUpdate/MadnessIteration3.png">
-            <p class="caption">Early Madness Build <em>(iteration 3)</em></p>
-          </a>
-          <a class="mediaTile" target="_blank" href="/src/images/TankiX/MadnessUpdate/MadnessIteration5.png">
-            <img src="/src/images/aspects/16x9.png">
-            <img src="/src/images/TankiX/MadnessUpdate/MadnessIteration5.png">
-            <p class="caption">Early Madness Build <em>(iteration 5)</em></p>
-          </a>
-          <a class="mediaTile" target="_blank" href="/src/images/TankiX/MadnessUpdate/SpookyMadness.webp">
-            <img src="/src/images/aspects/16x9.png">
-            <img src="/src/images/TankiX/MadnessUpdate/SpookyMadness.webp">
-            <p class="caption">Map Preview <em>(Cover)</em></p>
-          </a>
-          <a class="mediaTile" target="_blank" href="/src/images/TankiX/MadnessUpdate/SpookyMadnessSideView.png">
-            <img src="/src/images/aspects/16x9.png">
-            <img src="/src/images/TankiX/MadnessUpdate/SpookyMadnessSideView.png">
-            <p class="caption">Map Preview <em>(Side)</em></p>
-          </a>
-          <a class="mediaTile" target="_blank" href="/src/images/TankiX/MadnessUpdate/Madness.jpg">
-            <img src="/src/images/aspects/16x9.png">
-            <img src="/src/images/TankiX/MadnessUpdate/Madness.jpg">
-            <p class="caption">Map Preview <em>(Unthemed)</em></p>
-          </a>
-          <a class="mediaTile" target="_blank" href="/src/images/TankiX/MadnessUpdate/MadnessPointOfIntrest.png">
-            <img src="/src/images/aspects/16x9.png">
-            <img src="/src/images/TankiX/MadnessUpdate/MadnessPointOfIntrest.png">
-            <p class="caption">Point of Intrest <em>(Central)</em></p>
-          </a>
-          <a class="mediaTile" target="_blank" href="/src/images/TankiX/MadnessUpdate/PumpkinExperiments.png">
-            <img src="/src/images/aspects/16x9.png">
-            <img src="/src/images/TankiX/MadnessUpdate/PumpkinExperiments.png">
-            <p class="caption">Goldbox Experiments</p>
-          </a>
-          <a class="mediaTile" target="_blank" href="/src/images/TankiX/MadnessUpdate/GoldboxPumpkinSpawnMarker.png">
-            <img src="/src/images/aspects/16x9.png">
-            <img src="/src/images/TankiX/MadnessUpdate/GoldboxPumpkinSpawnMarker.png">
-            <p class="caption">Pumpkin Goldbox Spawn Marker</p>
-          </a>
-          <a class="mediaTile" target="_blank" href="/src/images/TankiX/MadnessUpdate/GoldboxPumpkinDropping.png">
-            <img src="/src/images/aspects/16x9.png">
-            <img src="/src/images/TankiX/MadnessUpdate/GoldboxPumpkinDropping.png">
-            <p class="caption">Pumpkin Goldbox Drop</p>
-          </a>
-          <a class="mediaTile" target="_blank" href="/src/images/TankiX/MadnessUpdate/RedBase.png">
-            <img src="/src/images/aspects/16x9.png">
-            <img src="/src/images/TankiX/MadnessUpdate/RedBase.png">
-            <p class="caption">Red Base</p>
-          </a>
-          <a class="mediaTile" target="_blank" href="/src/images/TankiX/MadnessUpdate/BlueBasePlayerView.png">
-            <img src="/src/images/aspects/16x9.png">
-            <img src="/src/images/TankiX/MadnessUpdate/BlueBasePlayerView.png">
-            <p class="caption">Blue Team with Flag POV</p>
+            <img src="/src/images/TankiX/txrevive.net/OrderConfirmation.png">
+            <p class="caption">Order Confirmation Page</p>
           </a>
         </div>
       </div>
