--- a/PublicTemplates/kavemans.dev/projects.html
+++ b/PublicTemplates/kavemans.dev/projects.html
@@ -21,7 +21,14 @@
         </h2>
         <div class="feed dynamicMargin centerize">
           <div class="row">
-            <img src="https://txrevive.net/src/sprites/Logo.webp" />
+            <img src="/src/images/TechAcademy/TransparentLogo.png" />
+            <a href="/orgs/TechAcademy">Student - Tech Academy</a>
+            <span>
+              Lorem Ipsum... no I don't remember the rest
+            </span>
+          </div>
+          <div class="row">
+            <img src="/src/sprites/Logo/ReviveTankiX.webp" />
             <a href="/orgs/TankiX">Unity Developer - Revive Tanki X</a>
             <span>
               Built a server with a team of 4 members for Tanki X. Was in charge of building in-game client
@@ -29,6 +36,13 @@
               provider. The central server was reponsible for storing user data, authenticating game servers, balancing players
               based on overall volume or server volume and relaying broadcasts to all active servers. And built a small
               dashboard to keep track of statistics.
+            </span>
+          </div>
+          <div class="row">
+            <img src="#" />
+            <a href="/orgs/CAL">Student - Center for Advanced Learning</a>
+            <span>
+              Need to add projects from here
             </span>
           </div>
           <!--<div class="row">
