Add Tech Academy MVC Project Demos

--- a/PublicTemplates/kavemans.dev/index.html
+++ b/PublicTemplates/kavemans.dev/index.html
@@ -115,13 +115,33 @@
               </div>
                 <img src="/src/sprites/langs/github.png" />
             </div>
+            <div class="item centerize" data-label="Azure">
+              <div class="popupAnchor centerize">
+                <div>
+                  <div class="popup">
+                    This is language that can be used to create servers or applications
+                  </div>
+                </div>
+              </div>
+                <img src="/src/sprites/langs/azure.png" />
+            </div>
+            <div class="item centerize" data-label="ASP.NET">
+              <div class="popupAnchor centerize">
+                <div>
+                  <div class="popup">
+                    This is language that can be used to create servers or applications
+                  </div>
+                </div>
+              </div>
+                <img src="/src/sprites/langs/aspdotnet.png" />
+            </div>
         </div>
       </div>
       <div id="projects" class="container centerize">
         <h2>Recent Activity</h2>
         <div class="row dynamicMargin">
           <img src="/src/images/TechAcademy/TransparentLogo.png" />
-          <a href="#">Student - Tech Academy</a>
+          <a href="/orgs/TechAcademy">Student - Tech Academy</a>
           <span>
             This was the Live Project portion in the bootcamp where it simulated a work enviorment and what you'd be doing as a programmer, aside from doing standups, there was a task board where there were tasks the required me to update content, add CRUD pages with .NET MVC and functionality with Entity Framework and properly style pages.
           </span>
