--- a/PublicTemplates/kavemans.dev/orgs/TechAcademy.html
+++ b/PublicTemplates/kavemans.dev/orgs/TechAcademy.html
@@ -60,34 +60,43 @@
                 <span class="tooltiptext">CSS</span>
               </span>
               <span class="label centerize">
-                <img src="/src/sprites/langs/javascript.png" alt="Javascript" />
-                <span class="tooltiptext">Javascript</span>
-              </span>
-              <span class="label centerize">
                 <img src="/src/sprites/langs/csharp.png" alt="C#" />
                 <span class="tooltiptext">C#</span>
               </span>
               <span class="label centerize">
                 <img src="/src/sprites/langs/database.png" alt="SQLite" />
-                <span class="tooltiptext">MS-SQL, MySQL</span>
+                <span class="tooltiptext">MSSQL, MySQL</span>
+              </span>
+              <span class="label centerize">
+                <img src="/src/sprites/langs/azure.png" alt="Azure" />
+                <span class="tooltiptext">Azure DevOps</span>
               </span>
             </span>
             <div class="description">
-              This was the Live Project portion in the bootcamp where it simulated a work enviorment and what you'd be doing as a programmer, aside from doing standups, there was a task board where there were tasks the required me to update content, add CRUD pages with .NET MVC and functionality with Entity Framework and properly style pages.
+              This was the Live Project portion in the bootcamp where it simulated a work enviorment and what you'd be doing as a programmer.
+              Aside from doing standups, there was a task board I would be assigned work to do like adding content, add CRUD pages with .NET MVC and functionality with Entity Framework and properly style pages.
             </div>
           </div>
         </div>
         <div class="projectEntry dynamicMargin">
           <div class="graphic">
             <img src="/src/images/aspects/16x9.png" />
-            <!--<img src="http://via.placeholder.com/160x90" />-->
+            <img src="./TechAcademy/NewsletterMVC/Preview960x540.png" />
           </div>
           <div class="content">
-            <a class="title" href="./TechAcademy/Todo">Newsletter Subscription - C# Programmer</a>
+            <a class="title" href="./TechAcademy/NewsLetterMVC">NewsLetter Subscription - C# Programmer</a>
             <span class="labels">
               <span class="label centerize">
                 <img src="/src/sprites/langs/csharp.png" alt="C#" />
                 <span class="tooltiptext">C#</span>
+              </span>
+              <span class="label centerize">
+                <img src="/src/sprites/langs/aspdotnet.png" alt="C#" />
+                <span class="tooltiptext">ASP.NET MVC</span>
+              </span>
+              <span class="label centerize">
+                <img src="/src/sprites/langs/live.png" alt="C#" />
+                <span class="tooltiptext">Live Demo Available</span>
               </span>
             </span>
             <div class="description">
@@ -98,14 +107,22 @@
         <div class="projectEntry dynamicMargin">
           <div class="graphic">
             <img src="/src/images/aspects/16x9.png" />
-            <!--<img src="http://via.placeholder.com/160x90" />-->
+            <img src="./TechAcademy/CarInsuranceMVC/Preview960x540.png" />
           </div>
           <div class="content">
-            <a class="title" href="./TechAcademy/Todo">Car Insurance Database - C# Programmer</a>
+            <a class="title" href="./TechAcademy/CarInsuranceMVC">Car Insurance Database - C# Programmer</a>
             <span class="labels">
               <span class="label centerize">
                 <img src="/src/sprites/langs/csharp.png" alt="C#" />
                 <span class="tooltiptext">C#</span>
+              </span>
+              <span class="label centerize">
+                <img src="/src/sprites/langs/aspdotnet.png" alt="C#" />
+                <span class="tooltiptext">ASP.NET MVC</span>
+              </span>
+              <span class="label centerize">
+                <img src="/src/sprites/langs/live.png" alt="C#" />
+                <span class="tooltiptext">Live Demo Available</span>
               </span>
             </span>
             <div class="description">
@@ -116,18 +133,30 @@
         <div class="projectEntry dynamicMargin">
           <div class="graphic">
             <img src="/src/images/aspects/16x9.png" />
-            <!--<img src="http://via.placeholder.com/160x90" />-->
+            <img src="./TechAcademy/ServerLocalTimeMVC/Preview480x270.png" />
           </div>
           <div class="content">
-            <a class="title" href="./TechAcademy/Todo">Server Local Time - C# Programmer</a>
+            <a class="title" href="./TechAcademy/ServerLocalTimeMVC">Server Local Time - C# Programmer</a>
             <span class="labels">
               <span class="label centerize">
                 <img src="/src/sprites/langs/csharp.png" alt="C#" />
                 <span class="tooltiptext">C#</span>
               </span>
+              <span class="label centerize">
+                <img src="/src/sprites/langs/aspdotnet.png" alt="C#" />
+                <span class="tooltiptext">ASP.NET MVC</span>
+              </span>
+              <span class="label centerize">
+                <img src="/src/sprites/langs/azure.png" alt="Azure" />
+                <span class="tooltiptext">Deployed on Azure</span>
+              </span>
+              <span class="label centerize">
+                <img src="/src/sprites/langs/live.png" alt="C#" />
+                <span class="tooltiptext">Live Demo Available</span>
+              </span>
             </span>
             <div class="description">
-              Needs content and MVC.NET badge
+              This was a project to publish a .NET Core MVC Application onto the Azure Cloud. The application within itself was not complicated, it consisted of a single page showing the local server's time in the center of the screen, you also got a visit counter/metric.
             </div>
           </div>
         </div>
@@ -137,7 +166,7 @@
             <!--<img src="http://via.placeholder.com/160x90" />-->
           </div>
           <div class="content">
-            <a class="title" href="./TechAcademy/Todo">Blackjack - C# Programmer</a>
+            <a class="title" href="./TechAcademy/Blackjack">Blackjack - C# Programmer</a>
             <span class="labels">
               <span class="label centerize">
                 <img src="/src/sprites/langs/csharp.png" alt="C#" />
@@ -152,10 +181,10 @@
         <div class="projectEntry dynamicMargin">
           <div class="graphic">
             <img src="/src/images/aspects/16x9.png" />
-            <!--<img src="http://via.placeholder.com/160x90" />-->
+            <img src="https://github.com/Kaveinator/Tech-Academy-CSharp-Projects/blob/7f4f4deb15140a57942fe173f3e343abae468280/readmeResources/Assignments.Preview.png?raw=true" />
           </div>
           <div class="content">
-            <a class="title" href="./TechAcademy/Todo">Assignments Console App - C# Programmer</a>
+            <a class="title" href="./TechAcademy/Assignments">Assignments Console App - C# Programmer</a>
             <span class="labels">
               <span class="label centerize">
                 <img src="/src/sprites/langs/csharp.png" alt="C#" />
@@ -170,7 +199,7 @@
         <div class="projectEntry dynamicMargin">
           <div class="graphic">
             <img src="/src/images/aspects/16x9.png" />
-            <!--<img src="http://via.placeholder.com/160x90" />-->
+            <img src="./TechAcademy/Todo/Preview960x540.png" />
           </div>
           <div class="content">
             <a class="title" href="./TechAcademy/Todo">Todo App - Frontend Developer</a>
@@ -187,6 +216,10 @@
                 <img src="/src/sprites/langs/javascript.png" alt="Javascript" />
                 <span class="tooltiptext">Javascript</span>
               </span>
+              <span class="label centerize">
+                <img src="/src/sprites/langs/live.png" alt="C#" />
+                <span class="tooltiptext">Live Demo Available</span>
+              </span>
             </span>
             <div class="description">
               A web app to keep track of things you need to do, also shows how long it took to complete a task
@@ -196,7 +229,7 @@
         <div class="projectEntry dynamicMargin">
           <div class="graphic">
             <img src="/src/images/aspects/16x9.png" />
-            <!--<img src="http://via.placeholder.com/160x90" />-->
+            <img src="./TechAcademy/TicTacToe/Preview1510x850.png" />
           </div>
           <div class="content">
             <a class="title" href="./TechAcademy/TicTacToe">Tic-Tac-Toe Web App - Frontend Developer</a>
@@ -213,6 +246,10 @@
                 <img src="/src/sprites/langs/javascript.png" alt="Javascript" />
                 <span class="tooltiptext">Javascript</span>
               </span>
+              <span class="label centerize">
+                <img src="/src/sprites/langs/live.png" alt="C#" />
+                <span class="tooltiptext">Live Demo Available</span>
+              </span>
             </span>
             <div class="description">
               The classic game with a 3x3 grid where the first player to get 3 in a row wins
@@ -222,7 +259,7 @@
         <div class="projectEntry dynamicMargin">
           <div class="graphic">
             <img src="/src/images/aspects/16x9.png" />
-            <!--<img src="http://via.placeholder.com/160x90" />-->
+            <img src="./TechAcademy/Calculator/Preview1510x850.png" />
           </div>
           <div class="content">
             <a class="title" href="./TechAcademy/Calculator">Calculator Web App - Frontend Developer</a>
@@ -239,6 +276,10 @@
                 <img src="/src/sprites/langs/javascript.png" alt="Javascript" />
                 <span class="tooltiptext">Javascript</span>
               </span>
+              <span class="label centerize">
+                <img src="/src/sprites/langs/live.png" alt="C#" />
+                <span class="tooltiptext">Live Demo Available</span>
+              </span>
             </span>
             <div class="description">
               A web app emulating a basic calculator and can do addition, subtraction, multiplication and division
@@ -248,7 +289,7 @@
         <div class="projectEntry dynamicMargin">
           <div class="graphic">
             <img src="/src/images/aspects/16x9.png" />
-            <!--<img src="http://via.placeholder.com/160x90" />-->
+            <img src="./TechAcademy/Beeper/Preview480x270.png" />
           </div>
           <div class="content">
             <a class="title" href="./TechAcademy/Beeper">Beeper - Frontend Developer</a>
@@ -264,6 +305,10 @@
               <span class="label centerize">
                 <img src="/src/sprites/langs/javascript.png" alt="Javascript" />
                 <span class="tooltiptext">Javascript</span>
+              </span>
+              <span class="label centerize">
+                <img src="/src/sprites/langs/live.png" alt="C#" />
+                <span class="tooltiptext">Live Demo Available</span>
               </span>
             </span>
             <div class="description">
